<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_rowWeight="2"
    android:background="#BBB891"
    tools:context="com.example.halilgnal.mathsolver.GameActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="top|center_vertical|center_horizontal"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/find_this"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.26"
                    android:gravity="right|center_vertical"
                    android:text="@string/find_this"
                    android:textSize="42sp" />

                <TextView
                    android:id="@+id/txtTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.74"
                    android:gravity="right|center_vertical"
                    android:text="@string/txtTimer"
                    android:textSize="42sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/targetValue"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/target_value"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/showCalculation"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="top|center"
                android:lineSpacingExtra="5dp"
                android:text="@string/show_calculation" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="New Button" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="New Button" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="New Button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="New Button" />


            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="New Button" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="New Button" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="3dp">

            <ImageView
                android:id="@+id/plusArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                app:srcCompat="@drawable/plus_512"
                android:contentDescription="@string/addition" />

            <ImageView
                android:id="@+id/minusArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                app:srcCompat="@drawable/minus_512"
                android:contentDescription="@string/subtraction" />

            <ImageView
                android:id="@+id/multiArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                app:srcCompat="@drawable/multiplication_512"
                android:contentDescription="@string/multiplication" />

            <ImageView
                android:id="@+id/divArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                app:srcCompat="@drawable/division2_512"
                android:contentDescription="@string/divide" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
